# CnC_Red_Alert

./: .gitignore  AGENTS.md  CMakeLists.txt  DDRAW.md  DRAWING.md  INFO.md  KEYBOARD.md  LVGL.md  MODEX.md  MOUSE.md  PROGRESS.md  README.md  SHADOWX.md  SOUND.md  agents.md  commlib.h  compat.h  compiler.h  dos.h  drawing.md  fast.h  info.md  lv_conf.h  modex.md  pcx.h  pragma.md  progress.md  redalert.ini  sound.md
.github/workflows/: riscv32.yml  x11_build.yml
CODE/: 2KEYFRAM.CPP  2keyfram.c  AIRCRAFT.CPP  ANIM.CPP  BENCH.H  BMP8.CPP  BULLET.CPP  CDFILE.CPP  CMakeLists.txt  COMBUF.CPP  CONFDLG.CPP  CONQUER.CPP  DESCDLG.CPP  DIBFILE.CPP  EXPAND.CPP  FTIMER.H  GAMEDLG.CPP  GETCPU.CPP  GLOBALS.CPP  GOPTIONS.CPP  GSCREEN.CPP  HSV.CPP  INIT.CPP  INTERNET.CPP  IPXMGR.CPP  KEY.CPP  KEYBOARD.CPP  LCWCOMP.ASM  LOADDLG.CPP  MAKEFILE  MAPEDDLG.CPP  MAPEDIT.CPP  MAPEDPLC.CPP  MAPEDTM.CPP  MCI.CPP  MENUS.CPP  MIXFILE.CPP  MPLAYER.CPP  MPLIB.CPP  MPLPC.CPP  (+70 more)
CODE/lvgl/: lvgl_backend.c  lvgl_backend.h  lvgl_bridge.c  lvgl_bridge.h  lvgl_input.c  lvgl_input.h  terminal.c  terminal.h
CODE/wwlib32/: wwlib32.h
IPX/OK/: PCMACRO.16
LAUNCH/: main.c  main.h  pcmacro.h
LAUNCHER/: 256bmp.c
TOOLS/AUDIOMAK/: scode.c
VQ/LVGL/: AUDIO.c  CAPTION.c  CMakeLists.txt  CONFIG.c  DRAWER.c  DSTREAM.c  LOADER.c  MONODISP.c  README.md  TASK.c  VERTAG.c  lvgl_drawer.c  unvq_stub.c  vq_lvgl_decoder.c  vq_lvgl_decoder.h  vq_lvgl_player.c  vq_lvgl_player.h
VQ/LVGL/INCLUDE/: sosdata.h
VQ/LVGL/demos/: cc-demo1.vqa  cc-demo_.txt
VQ/LVGL/include/: sos.h  sosdata.h  sosdefs.h  sosres.h  unvq.h  vq.h
VQ/VQA32/: AUDIO.CPP  CMakeLists.txt  CONFIG.CPP  DRAWER.CPP  LOADER.CPP  MONODISP.CPP  vqafile.h  vqaplayp.h
VQ/VQM32/: IFF.CPP  SOSCODEC.ASM  TARGA.CPP  all.h  crc.h  huffman.h  mono.h  palette.h  portio.h  text.h  vesablit.h  video.h
WIN32LIB/AUDIO/: SOUNDINT.CPP  SOUNDIO.CPP
WIN32LIB/DIPTHONG/: MAKEFILE
WIN32LIB/DRAWBUFF/: MAKEFILE
WIN32LIB/INCLUDE/: KEYBOARD.H  MONO.H  WWMEM.H  WWSTD.H  shape.h  soscomp.h  sosdefs.h  wwstd.h
WIN32LIB/MISC/: FINDARGV.CPP  IRANDOM.CPP  REVERSE.ASM
WIN32LIB/PALETTE/: MORPHPAL.CPP  PAL.ASM
WIN32LIB/SHAPE/: DRAWSHP.ASM  DS_RSS.ASM  SETSHAPE.ASM
WIN32LIB/SRCDEBUG/: DS_LRS.ASM  DS_LS.ASM  DS_RRS.ASM  FACING16.ASM  FFIRST.ASM  FFIXSEL.ASM  FILE.CPP  FILEIO.CPP  HARDERR.ASM  TIMERDWN.CPP  VERTBLNK.ASM  WRITELBM.CPP  XORDELTA.ASM
WIN32LIB/TIMER/: timer.c
WIN32LIB/WW_WIN/: MAKEFILE  WINHIDE.CPP
WIN32LIB/mem/: wwmem.h
WINVQ/VPLAY32/: PLYVQA32.CPP
WINVQ/VQA32/: sosres.h
WINVQ/VQAVIEW/: TEST.MAK  vq.h  westwood.h
WINVQ/VQM32/: MAKEFILE  SOSCODEC.ASM
WWFLAT32/AUDIO/: MAKEFILE  SOUNDIO.CPP
WWFLAT32/DESCMGMT/: FGETDS.ASM
WWFLAT32/DIPTHONG/: MAKEFILE
WWFLAT32/FILE/: DEVICES.ASM  DEVTABLE.ASM  FILE.BAK  FILE.CPP  FILEINIT.CPP  FINDFILE.BAK  FINDFILE.CPP
WWFLAT32/IFF/: IFF.BAK  LCWUNCMP.ASM  LOAD.BAK  LOAD.CPP  WRITELBM.CPP
WWLVGL/: AGENTS.md  CMakeLists.txt  DDRAW.md  MIGRATION.md  PROGRESS.md  README.md  agents.md  migration.md  progress.md  sound.md
WWLVGL/AUDIO/: CMakeLists.txt  SOUNDINT.CPP  SOUNDIO.CPP  SOUNDLCK.CPP  TST.CPP  audio.h  soscomp.h  soundint.c  soundio.c  soundlck.c
WWLVGL/AUDIO/OLD/: SOUNDINT.CPP  SOUNDIO.CPP  TEST.CPP
WWLVGL/DIPTHONG/: CMakeLists.txt  MAKEFILE.WAT
WWLVGL/DRAWBUFF/: CMakeLists.txt
WWLVGL/DRAWBUFF/TEST/: TEST.BAK  TEST.CPP
WWLVGL/EXAMPLE/: CMakeLists.txt
WWLVGL/FONT/: CMakeLists.txt
WWLVGL/IFF/: CMakeLists.txt  LCWCOMP.ASM  PACK2PLN.ASM
WWLVGL/INCLUDE/: CMakeLists.txt  MCGAPRIM.INC  keyboard.h  memflag.h  misc.h  modemreg.h  port.h  rawfile.h  surface_api.h  timer.h  wincomm.h  wwstd.h
WWLVGL/KEYBOARD/: CMakeLists.txt
WWLVGL/MEM/: alloc.c  mem.c  memflag.h  newdel.c  wwmem.h
WWLVGL/MISC/: CMakeLists.txt  MAKEFILE  MAKEFILE.WAT  wwstd.h
WWLVGL/MONO/: CMakeLists.txt  MAKEFILE  MAKEFILE.WAT
WWLVGL/MOVIE/: CMakeLists.txt
WWLVGL/PALETTE/: CMakeLists.txt  PALETTE.CPP
WWLVGL/PLAYCD/: CMakeLists.txt  GETCD.CPP  PLAYCD.ASM
WWLVGL/PORT/: CMakeLists.txt  port.c
WWLVGL/PROFILE/: CMakeLists.txt  PROFILE.CPP  WPROFILE.CPP
WWLVGL/PROFILE/UTIL/: PROFILE.CPP
WWLVGL/RAWFILE/: CMakeLists.txt  rawfile.h
WWLVGL/SHAPE/: CMakeLists.txt  SHAPE.INC
WWLVGL/SRCDEBUG/: AGENTS.md  ALLOC.c  CMakeLists.txt  DDRAW.CPP  FGETCS.ASM  FGETSEL.ASM  FINDFILE.CPP  ICONCACH.CPP  INITMONO.CPP  MONO.ASM  MONO.CPP  TEST.CPP  TIMERINI.CPP  TST.CPP  WINHIDE.c  _DIPTABL.c  agents.md
WWLVGL/SRCDEBUG/AUDIO/: CMakeLists.txt  SOUNDINT.CPP  SOUNDIO.CPP  SOUNDLCK.CPP  soundint.h
WWLVGL/SRCDEBUG/BUFFER/: CMakeLists.txt
WWLVGL/SRCDEBUG/FILE/: CMakeLists.txt
WWLVGL/SRCDEBUG/FONT/: CMakeLists.txt
WWLVGL/SRCDEBUG/KEYBOARD/: CMakeLists.txt
WWLVGL/SRCDEBUG/MOUSE/: CMakeLists.txt
WWLVGL/SRCDEBUG/PALETTE/: CMakeLists.txt
WWLVGL/SRCDEBUG/PROFILE/: CMakeLists.txt  PROFILE.CPP
WWLVGL/SRCDEBUG/RAWFILE/: CMakeLists.txt  RAWFILE.CPP
WWLVGL/SRCDEBUG/SHAPE/: CMakeLists.txt  DS_LSS.ASM  DS_RS.ASM  DS_RSRS.ASM
WWLVGL/SRCDEBUG/TIMER/: CMakeLists.txt
WWLVGL/SRCDEBUG/VESA/: CMakeLists.txt
WWLVGL/SRCDEBUG/VIDEO/: CMakeLists.txt  surface_api.cpp
WWLVGL/SRCDEBUG/WINCOMM/: CMakeLists.txt
WWLVGL/TILE/: CMakeLists.txt  MAKEFILE  MAKEFILE.WAT
WWLVGL/TIMER/: CMakeLists.txt  TIMER.CPP  timer.h
WWLVGL/WINCOMM/: CMakeLists.txt  WINCOMM.CPP
WWLVGL/WSA/: CMakeLists.txt
WWLVGL/WW_WIN/: CMakeLists.txt  MAKEFILE.WAT  WINDOWS.CPP
WWLVGL/WW_WIN/OLD/: MAKEFILE  WINDOWS.CPP  WINHIDE.CPP
WWLVGL/mem/: CMakeLists.txt  MEM_COPY.ASM  alloc.c  mem.c  memflag.h  newdel.c  wwmem.h
WWLVGL/mem/msvc/: MEM.CPP
cmake/: base.cmake  platformDOS.cmake  platformLVGL.cmake  platformWIN.cmake  riscv32_qemu.cmake  riscv64_qemu.cmake
docs/: rename_plan.md
src/: audio_decompress.c  audio_decompress.h  blit_stub.c  cpuid.c  cpuid.h  debug_log.h  dos_graphics.c  drawbuff_c.c  fast_stub.c  file_io.c  input_asm_repl.c  ipx_stub.c  lcw_comp.c  lcw_uncompress.c  mem_helpers.c  miniaudio.c  support.c  support_stub.c
tests/: CMakeLists.txt  TESTS.md  fixed_math_test.cpp  ipx_stub_test.c  vqa_video_player.c
tools/: build_lvgl.sh
(+96 files in other folders)
