# Build the main game code as a static library

# List of C/C++ sources converted from the historical MAKEFILE
set(CODE_SOURCES
2KEYFRAM.CPP
AADATA.CPP
ABSTRACT.CPP
ADATA.CPP
ADPCM.CPP
AIRCRAFT.CPP
ALLOC.CPP
ANIM.CPP
AUDIO.CPP
B64PIPE.CPP
B64STRAW.CPP
BAR.CPP
BASE.CPP
BASE64.CPP
BBDATA.CPP
BDATA.CPP
BENCH.CPP
BFIOFILE.CPP
BIGCHECK.CPP
BLOWFISH.CPP
BLOWPIPE.CPP
BLWSTRAW.CPP
BMP8.CPP
BUFF.CPP
BUILDING.CPP
BULLET.CPP
CARGO.CPP
CARRY.CPP
CCDDE.CPP
CCFILE.CPP
CCINI.CPP
CCMPATH.CPP
CCPTR.CPP
CCTEN.CPP
CDATA.CPP
CDFILE.CPP
CELL.CPP
CHECKBOX.CPP
CHEKLIST.CPP
CLASS.CPP
COLRLIST.CPP
COMBAT.CPP
COMBUF.CPP
COMINIT.CPP
COMQUEUE.CPP
CONFDLG.CPP
CONNECT.CPP
CONQUER.CPP
CONST.CPP
CONTROL.CPP
COORD.CPP
CRATE.CPP
CRC.CPP
CRCPIPE.CPP
CRCSTRAW.CPP
CREDITS.CPP
CREW.CPP
CSTRAW.CPP
DDE.CPP
DEBUG.CPP
DESCDLG.CPP
DIAL8.CPP
DIALOG.CPP
DIBFILE.CPP
DIBUTIL.CPP
DISPLAY.CPP
DOOR.CPP
DPMI.CPP
DRIVE.CPP
DROP.CPP
DTABLE.CPP
DYNAVEC.CPP
EDIT.CPP
EGOS.CPP
ENDING.CPP
EVENT.CPP
EXPAND.CPP
FACE.CPP
FACING.CPP
FACTORY.CPP
FIELD.CPP
FILE.CPP
FINDPATH.CPP
FIXED.CPP
FLASHER.CPP
FLY.CPP
FOOT.CPP
FUSE.CPP
GADGET.CPP
GAMEDLG.CPP
GAUGE.CPP
GETCPU.CPP
GLOBALS.CPP
GOPTIONS.CPP
GSCREEN.CPP
HDATA.CPP
HEAP.CPP
HELP.CPP
HOUSE.CPP
HSV.CPP
ICONLIST.CPP
IDATA.CPP
INFANTRY.CPP
INI.CPP
INIBIN.CPP
INICODE.CPP
INIT.CPP
INT.CPP
INTERNET.CPP
INTERPAL.CPP
INTRO.CPP
IOMAP.CPP
IOOBJ.CPP
IPX.CPP
IPX95.CPP
IPXADDR.CPP
IPXCONN.CPP
IPXGCONN.CPP
IPXMGR.CPP
ITABLE.CPP
JSHELL.CPP
KEY.CPP
KEYBOARD.CPP
KEYFRAME.CPP
LAYER.CPP
LCW.CPP
LCWPIPE.CPP
LCWSTRAW.CPP
LCWUNCMP.CPP
LINK.CPP
LIST.CPP
LOADDLG.CPP
LOGIC.CPP
LZO1X_C.CPP
LZO1X_D.CPP
LZOPIPE.CPP
LZOSTRAW.CPP
LZW.CPP
LZWOTRAW.CPP
LZWPIPE.CPP
LZWSTRAW.CPP
MAP.CPP
MAPEDDLG.CPP
MAPEDIT.CPP
MAPEDPLC.CPP
MAPEDSEL.CPP
MAPEDTM.CPP
MAPSEL.CPP
MCI.CPP
MCIMOVIE.CPP
MENUS.CPP
MISSION.CPP
MIXFILE.CPP
MONOC.CPP
MOUSE.CPP
MP.CPP
MPGSET.CPP
MPLAYER.CPP
MPLIB.CPP
MPLPC.CPP
MPMGRD.CPP
MPMGRW.CPP
MPU.CPP
MSGBOX.CPP
MSGLIST.CPP
NETDLG.CPP
NOSEQCON.CPP
NULLCONN.CPP
NULLDLG.CPP
NULLMGR.CPP
NUMBER.CPP
OBJECT.CPP
ODATA.CPP
OPTIONS.CPP
OVERLAY.CPP
PACKET.CPP
PIPE.CPP
PK.CPP
PKPIPE.CPP
PKSTRAW.CPP
POWER.CPP
PROFILE.CPP
QUEUE.CPP
RADAR.CPP
RADIO.CPP
RAMFILE.CPP
RAND.CPP
RANDOM.CPP
RAWFILE.CPP
RAWOLAPI.CPP
READLINE.CPP
RECT.CPP
REINF.CPP
RGB.CPP
RNDSTRAW.CPP
ROTBMP.CPP
RULES.CPP
SAVELOAD.CPP
SCENARIO.CPP
SCORE.CPP
SCROLL.CPP
SDATA.CPP
SEDITDLG.CPP
SENDFILE.CPP
SEQCONN.CPP
SESSION.CPP
SHA.CPP
SHAPEBTN.CPP
SHAPIPE.CPP
SHASTRAW.CPP
SIDEBAR.CPP
SLIDER.CPP
SMUDGE.CPP
SOUNDDLG.CPP
SPECIAL.CPP
SPRITE.CPP
STARTUP.CPP
STATBTN.CPP
STATS.CPP
STRAW.CPP
STUB.CPP
SUPER.CPP
SURFACE.CPP
TAB.CPP
TACTION.CPP
TARCOM.CPP
TARGET.CPP
TCPIP.CPP
TDATA.CPP
TEAM.CPP
TEAMTYPE.CPP
TECHNO.CPP
TEMP.CPP
TEMPLATE.CPP
TENMGR.CPP
TERRAIN.CPP
TEVENT.CPP
TEXTBTN.CPP
THEME.CPP
TOGGLE.CPP
TOOLTIP.CPP
TRACKER.CPP
TRIGGER.CPP
TRIGTYPE.CPP
TURRET.CPP
TXTLABEL.CPP
UDATA.CPP
UDPADDR.CPP
UNIT.CPP
UTRACKER.CPP
VDATA.CPP
VECTOR.CPP
VERSION.CPP
VESSEL.CPP
VISUDLG.CPP
VORTEX.CPP
W95TRACE.CPP
WARHEAD.CPP
WEAPON.CPP
WINSTUB.CPP
WOLAPIOB.CPP
WOLEDIT.CPP
WOLSTRNG.CPP
WOL_CGAM.CPP
WOL_CHAT.CPP
WOL_DNLD.CPP
WOL_GSUP.CPP
WOL_LOGN.CPP
WOL_MAIN.CPP
WOL_OPT.CPP
WRITEPCX.CPP
WSPIPX.CPP
WSPROTO.CPP
WSPUDP.CPP
XPIPE.CPP
XSTRAW.CPP
_WSPROTO.CPP
lvgl/lvgl_bridge.c
lvgl/terminal.c
)

set(CODE_ASM
2KEYFBUF.ASM
2SUPPORT.ASM
2TXTPRNT.ASM
COORDA.ASM
CPUID.ASM
IPXPROT.ASM
IPXREAL.ASM
KEYFBUFF.ASM
LCWCOMP.ASM
SUPPORT.ASM
TXTPRNT.ASM
WINASM.ASM
)

list(TRANSFORM CODE_SOURCES PREPEND "${CMAKE_CURRENT_LIST_DIR}/")
list(TRANSFORM CODE_ASM PREPEND "${CMAKE_CURRENT_LIST_DIR}/")

if(NOT ENABLE_ASM)
    set(CODE_ASM)
elseif(REPLACEMENT_ASM_DIR)
    file(GLOB CODE_ASM "${REPLACEMENT_ASM_DIR}/*.asm")
endif()

add_library(gamecode STATIC ${CODE_SOURCES} ${CODE_ASM})

target_include_directories(gamecode PUBLIC
    ${CMAKE_CURRENT_LIST_DIR}/../WIN32LIB/INCLUDE
    ${CMAKE_CURRENT_LIST_DIR}/../VQ/INCLUDE/WWLIB32
    ${CMAKE_CURRENT_LIST_DIR}/../VQ/VQA32
    ${CMAKE_CURRENT_LIST_DIR}/../VQ/VQM32
    ${CMAKE_CURRENT_LIST_DIR}/../src/ddraw
    ${CMAKE_CURRENT_LIST_DIR}/../src
    "${CMAKE_SOURCE_DIR}"
)

target_compile_definitions(gamecode PUBLIC $<$<BOOL:${USE_LVGL}>:USE_LVGL>)
target_compile_definitions(gamecode PUBLIC $<$<BOOL:${ENABLE_ASM}>:ENABLE_ASM>)

set(CODE_SOURCES ${CODE_SOURCES} PARENT_SCOPE)
set(CODE_ASM ${CODE_ASM} PARENT_SCOPE)
